--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -5,10 +5,9 @@
 }
 .container{
     width:100%;
-    max-width:1000px;
+    max-width:100%;
     margin:0px auto;
 }
-
 .row:before, .row:after{
     content:"";
     display:table;
